--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="My first PWA" />
     <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="Timothy Manwell" />
+    <meta name="author" content="Darcy Murphy" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Click the Cookie</title>
     <link
       rel="canonical"
-      href="https://timothy-manwell.github.io/ICS2O-Unit6-02/"
+      href="https://darcy-murphy.github.io/ICS2O-Unit6-02/"
     />
     <link rel="manifest" href="/ICS2O-Unit6-02/manifest.webmanifest" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
     <link
@@ -57,7 +57,7 @@
       <main class="mdl-layout__content">
         <p></p>
         <img
-          src="./images/cookie.png"
+          src="./images/Cookie-Monster-Cookies.webp"
           alt="Computer"
           width="35%"
           height="auto"
